# flightcrew

./: README.md  pyproject.toml
knowledge/: inquiry
src/flightcrew/: crew.py  main.py
src/flightcrew/config/: tasks.yaml
src/flightcrew/models/: FlightsFound.py  GeoLocations.py
src/flightcrew/tools/: flight_finder.py
